CHANGELOG

2018-11-20: Bug fixes: correctly handle {-oy}, fix display of names
2018-11-15: Vocabulary from qepHom'a' 2018.
2018-10-07: Deprecate API_7 version (target SDK 19), will no longer be updated.
2018-09-04: Fix Chinese search.
2018-08-19: Change German language options to broader secondary language options.
2018-08-02: Add ability to submit corrections to Google Forms.
2018-07-29: Corrections to qep'a' 2018 vocab.
2018-07-21: New vocabulary from qep'a' 2018.
2018-07-17: Disable auto-backup of database which seems to cause problems. Hide other languages for alt entries.
2018-06-25: Might as well add Persian, Swedish, and Chinese (Hong Kong) while we're at it. Also import Swedish data from Klingonska Akademien.
2018-06-24: Add code to handle placeholders for Russian data.
2018-06-11: Make the difference between app version and database version more clear.
2018-04-12: Caught up to all German definitions (again).
2018-04-09: Enable database update by default.
2018-03-29: Add ability to update database independently of app.
2018-03-21: Fix errors, add links between related entries, add DSC and Duolingo people names.
2018-03-07: Fix a lot of typos. Update YouTube links.
2018-02-25: Vocab from comments by Maltz about {boQwI'}.
2018-02-08: DSC vocab up to S01E15.
2018-01-29: some German translations of DSC vocab.
2018-01-11: Misc. edits, paq'batlh page numbers
2017-12-18: Misc. edits, some German translations.
2017-11-27: Misc. edits.
2017-11-13: Fix bug with link target on last line. Added qepHom'a' 2017 vocab.
2017-11-05: If KWOTD fails to match entry in db, treat as search. Lock bottom nav buttons to bottom of screen.
2017-10-31: More unconfirmed DSC words. Remove FAB, adjust UI spacing.
2017-10-29: Exclude extra section from random button.
2017-10-25: Add DSC font. Fix locale issues. Improve Preferences activity.
2017-10-24: Turn off copy and paste in entry. Hide KWOTD menu, and automatically start KWOTD job.